fix button small design inconsisency

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -9,7 +9,6 @@
     font-size: 14px;
     line-height: 21px;
     min-width: 100%;
-    height: 17px;
   }
   &__primary {
     background: $glossy-blue;
